Test Creating User Avatars #16

--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -1149,7 +1149,7 @@
     <div class="footer">
       <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
           <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-          <span>a</span>
+          <span>aaa</span>
       </a>
       <a href="#" id="tasksButton" class="footer-icon" aria-label="Tasks">
           <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -1237,7 +1237,7 @@ li.style.marginBottom = "10px"; // Adds space between cards
   
   const avatar = document.createElement("img");
   avatar.src = data.avatars?.[user] || "/BeeMazing-Y1/shared/Avatars/default.png";
-  avatar.style.width = "100px";         // large like profile
+  avatar.style.width = "90px";         // large like profile
   avatar.style.height = "90px";
   avatar.style.borderRadius = "20px";
   avatar.style.objectFit = "cover";
