--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -1149,7 +1149,7 @@
     <div class="footer">
       <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
           <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-          <span>aaa</span>
+          <span>1</span>
       </a>
       <a href="#" id="tasksButton" class="footer-icon" aria-label="Tasks">
           <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -1229,7 +1229,7 @@ data.users.forEach(user => {
 li.style.borderRadius = "16px";  // 🟢 Rounded edges restored
 li.style.background = "var(--card-bg)";  // Optional: soft dark card bg
 li.style.marginBottom = "10px"; // Adds space between cards
-  li.style.padding = "8px 12px";
+  li.style.padding = "8px 10px";
   li.style.gap = "12px";
   li.style.cursor = "pointer";
   li.style.transition = "background 0.2s ease";
@@ -1237,7 +1237,7 @@ li.style.marginBottom = "10px"; // Adds space between cards
   
   const avatar = document.createElement("img");
   avatar.src = data.avatars?.[user] || "/BeeMazing-Y1/shared/Avatars/default.png";
-  avatar.style.width = "90px";         // large like profile
+  avatar.style.width = "80px";         // large like profile
   avatar.style.height = "90px";
   avatar.style.borderRadius = "20px";
   avatar.style.objectFit = "cover";
