--- a/mobile/2-UserProfiles/chooseAvatar.html
+++ b/mobile/2-UserProfiles/chooseAvatar.html
@@ -286,10 +286,6 @@
         <img src="/BeeMazing-Y1/shared/Avatars/mileena1.png" alt="Mileena" />
         <div class="char-name">Mileena</div>
       </div>
-      <div class="character-card" data-name="Kitana" data-id="kitana1">
-        <img src="/BeeMazing-Y1/shared/Avatars/kitana1.png" alt="Kitana" />
-        <div class="char-name">Kitana</div>
-      </div>
     </div>
 
     <div class="preview-container">
@@ -344,13 +340,15 @@
         selectedText.textContent = `${name}`;
         previewArea.style.display = 'block';
   
-        const videoPath = `/BeeMazing-Y1/shared/Avatars/Selected/Preview/${id}.mp4`;
-        const imagePath = `/BeeMazing-Y1/shared/Avatars/Selected/${id}.png`;
+        const videoPath = `/shared/Avatars/Selected/Preview/${id}.mp4`;
+        const imagePath = `/shared/Avatars/Selected/${id}.png`;
   
         previewImg.style.display = 'none';
         video.style.display = 'block';
         video.src = videoPath;
         video.load();
+        confirmButton.style.display = "none";
+
   
         video.muted = false;
         video.volume = 1;
