Test Creating User Avatars #24

--- a/mobile/2-UserProfiles/chooseAvatar.html
+++ b/mobile/2-UserProfiles/chooseAvatar.html
@@ -286,6 +286,10 @@
         <img src="/BeeMazing-Y1/shared/Avatars/mileena1.png" alt="Mileena" />
         <div class="char-name">Mileena</div>
       </div>
+      <div class="character-card" data-name="Kitana" data-id="kitana1">
+        <img src="/BeeMazing-Y1/shared/Avatars/kitana1.png" alt="Kitana" />
+        <div class="char-name">Kitana</div>
+      </div>
     </div>
 
     <div class="preview-container">
@@ -350,7 +354,7 @@
         confirmButton.style.display = "none";
 
   
-        video.muted = false;
+        video.muted = true;
         video.volume = 1;
         video.currentTime = 0;
         video.play().catch(err => {
