--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -1231,13 +1231,15 @@ modalHTML += `<strong>Progress:</strong> ${isRotation ? turnData.completedCount 
 
 
 // for finish task button video preview
-
-        async function fetchAvatarPath(userName) {
+async function fetchAvatarPath(userName) {
   const adminEmail = localStorage.getItem("currentAdminEmail");
   try {
-    const res = await fetch(`https://beemazing.onrender.com/api/user-avatar?adminEmail=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`);
+    const res = await fetch(`https://beemazing.onrender.com/get-avatar?adminEmail=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`);
     const data = await res.json();
-    return data.avatar; // should be a full path like "/BeeMazing-Y1/shared/Avatars/kitana1.png"
+    if (!data.success || !data.avatar) {
+      throw new Error(data.message || "Avatar not found");
+    }
+    return data.avatar; // returns full path like "/BeeMazing-Y1/shared/Avatars/scorpion1.png"
   } catch (err) {
     console.warn("Could not fetch avatar path:", err);
     return null;
@@ -1252,37 +1254,35 @@ modalHTML += `<strong>Progress:</strong> ${isRotation ? turnData.completedCount 
 
 
 
-
-        async function finishTask(currentUser, task, selectedDate) {
+async function finishTask(currentUser, task, selectedDate) {
   const today = selectedDate || new Date().toISOString().split("T")[0];
   const adminEmail = localStorage.getItem("currentAdminEmail");
   const button = event.target;
   button.disabled = true;
 
+  // Fetch avatar and derive video path
   const avatarPath = await fetchAvatarPath(currentUser);
-const avatarId = avatarPath?.match(/\/([^/]+)\.png$/)?.[1]; // extract "kitana1" from full path
-const videoPath = avatarId ? `/BeeMazing-Y1/shared/Avatars/Selected/Preview/${avatarId}.mp4` : null;
+  const avatarId = avatarPath?.match(/\/([^/]+)\.png$/)?.[1]; // e.g., "scorpion1"
+  const videoPath = avatarId ? `/BeeMazing-Y1/shared/Avatars/Selected/Preview/${avatarId}.mp4` : null;
 
-
+  // Show video overlay if videoPath exists
   if (videoPath) {
     const overlay = document.getElementById("taskVideoOverlay");
-const videoEl = document.getElementById("taskAvatarVideo");
-
-if (overlay && videoEl && videoPath) {
-  overlay.style.display = "flex";
-  videoEl.src = videoPath;
-  videoEl.muted = false;
-  videoEl.load();
-  videoEl.play().catch(err => console.warn("Could not auto-play preview:", err));
-
-  videoEl.onended = () => {
-    overlay.style.display = "none";
-    videoEl.src = "";
-  };
-}
-
+    const videoEl = document.getElementById("taskAvatarVideo");
+    if (overlay && videoEl) {
+      overlay.style.display = "flex";
+      videoEl.src = videoPath;
+      videoEl.muted = false;
+      videoEl.load();
+      videoEl.play().catch(err => console.warn("Could not auto-play preview:", err));
+      videoEl.onended = () => {
+        overlay.style.display = "none";
+        videoEl.src = "";
+      };
+    }
   }
 
+  // Show submission popup
   const popup = document.createElement("div");
   popup.className = "reward-popup";
   popup.textContent = `Submitting Task...`;
@@ -1307,7 +1307,6 @@ if (overlay && videoEl && videoPath) {
     button.disabled = false;
   }
 }
-
 
 
 
