--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -1379,7 +1379,7 @@ Your browser does not support the video tag.
 
 <div id="taskVideoOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.95); z-index:9999; justify-content:center; align-items:center; flex-direction:column;">
   <h1 style="color: gold; font-size: 36px; margin-bottom: 20px; font-family: Orbitron, sans-serif;">Well Done!</h1>
-  <video id="taskAvatarVideo" autoplay playsinline controls style="max-width:90vw; max-height:70vh; border-radius:20px; box-shadow: 0 0 30px gold; background: black;"></video>
+  <video id="taskAvatarVideo" autoplay playsinline style="max-width:90vw; max-height:70vh; border-radius:20px; box-shadow: 0 0 30px gold; background: black;"></video>
 </div>
 
 
